# bakery

./: .gitignore  README.md  bakery.cabal  cabal.project
src/Bakery/: Bakery.hs  GLCommon.hs  Layout.hs  Texture.hs  Vertex.hs
test/: BakeryTest.hs
